--- a/views/design.erb
+++ b/views/design.erb
@@ -64,26 +64,192 @@
 					<p>In 1986, Italian neuroscientist and cyberneticist Valentino Braitenberg described a series of hypothetical vehicles with simple internal structures in his book Vehicles: Experiments in Synthetic Psychology.  Braitenberg argues that his extraordinarily simple mechanical vehicles manifest behaviors such as fear, aggression, love, foresight, and optimism.  Reynolds took his inspiration from Braitenberg, and we’ll take ours from Reynolds.    Reynolds uses the word “Vehicle” to describe his autonomous agents, so we will follow suit.</p>
 				</section> <!-- .breakout -->
 				
+				<p>In his 1999 paper “Steering Behaviors for Autonomous Characters”, Reynolds describes the motion of idealized vehicles (idealized because we are not concerned with the actual engineering of such vehicles, but simply assume that they exist and will respond to our rules)as a series of three layers—Action Selection, Steering, and Locomotion.</p>
+				<ol>
+					<li><p><b>Action Selection. </b>A Vehicle has a goal (or goals) and can select an action (or a combination of actions) based on that goal.  This is essentially where we left off with autonomous agents.  The vehicle takes a look at its environment and calculates an action based on a desire: “I see a zombie marching towards me. Since I don’t want my brains to be eaten, I’m going to flee from the zombie.”   The goal is to keep one’s brains and the action is to flee.   Reynolds’s paper describes many goals and associated actions such as: seek a target, avoid an obstacle, and follow a path..   In a moment, we’ll start building these examples out with Processing code.</p></li>
+					<li><p><b>Steering. </b>Once an action has been selected, the vehicle has to calculate its next move.  For us, the next move will be a force; more specifically, a steering force.  Luckily, Reynolds has developed a simple steering force formula that we’ll use throughout the examples in this chapter: <em>Steering Force = Desired Velocity minus Current Velocity</em>.  We’ll get into the details of this formula and why it works so effectively in the next section.</p></li>
+					<li><p><b>Locomotion. </b>For the most part, we’re going to ignore this third layer.   In the case of fleeing zombies, the locomotion could be described as “left foot, right foot, left foot, right foot, as fast as you can.”   In our Processing world, however, a rectangle or circle or triangle’s actual movement across a window is irrelevant given that it’s all an illusion in the first place.  Nevertheless, this isn’t to say that you should ignore locomotion.   You will find great value in thinking about the locomotive design of your vehicle and how you choose to animate it.   The examples in this chapter will remain visually bare, and a good exercise would be to elaborate on the animation style —could you add spinning wheels or oscillating paddles or shuffling legs?</p></li>
+				</ol>
+				<p>Ultimately, the most important layer for you to consider is #1 -- <em>Action Selection</em>.  What are the elements of your system and what are their goals?  In this chapter, we are going to look at a series of steering behaviors (i.e. actions): seek, flee, follow a path, follow a flow field, flock with your neighbors, etc.   It’s important to realize, however, that the point of understanding how to write the code for these behaviors is not because you should use them in all of your projects.  Rather, these are a set of building blocks, a foundation from which you can design and develop vehicles with creative goals and new and exciting behaviors.   And even though we will think literally in this chapter (follow that pixel), you should allow yourself to think more abstractly (like Braitenberg). What would it mean for your vehicle to have “love” or “fear” as its goal, its driving force?    Finally (and we’ll address this later in the chapter) you won’t get very far by developing simulations with only one action.  Yes, our first example will be “seek a target.”  But for you to be creative—to, as they say in <em>American Idol</em>, make these steering behaviors <em>your own</em>&mdash;it will all come down to mixing and matching multiple actions within the same vehicle.  So view these examples not as singular behaviors to be emulated, but as pieces of a larger puzzle that you will eventually assemble.</p>
+				
+			</section>
+			
+			<section>
+				<h1>6.3 The Steering Force</h1>
+				<p>We can entertain ourselves by discussing the theoretical principles behind autonomous agents and steering as much as we like, but we can’t get anywhere without first understanding the concept of a steering force. Consider the following scenario.  A “Vehicle” moving with velocity desires to seek a target.</p>
+				<div class="image">
+					<image class="inline" title="Seek" src="<%=@folder%>/seek.jpg"</image>
+				</div>	<!-- .image -->
+				<p>
+					Its goal and subsequent action is to seek the target in the above figure.  If you think back to Chapter 2, you might begin by making the target an “attractor” and apply a gravitational force that pulls the vehicle to the target.  This would be a perfectly reasonable solution, but conceptually it’s not what we’re looking for here.   We don’t want to simply calculate a force that pushes the Vehicle towards its target; rather, we are asking the Vehicle to make an intelligent decision to steer towards the target based on its perception of its state and environment (i.e. how fast and in what direction is it currently moving).   The vehicle should look at how it desires to move (a vector pointing to the target), compare that goal  with how quickly it is currently moving (its velocity), and apply a force accordingly.
+					<blockquote>STEERING FORCE = DESIRED VELOCITY - CURRENT VELOCITY</blockquote>
+					Or as we might write in Processing:
+					<div class="source">
+						<pre><code>	PVector steer = PVector.sub(desired,velocity);}</code></pre>
+					</div> <!-- .source -->
+					
+					In the above formula, velocity is no problem.  After all, we’ve got a variable for that.   However, we don’t have the desired velocity; this is something we have to calculate.  Let’s take a look at Figure X again.   If we’ve defined the vehicle’s goal as “seeking the target”, then its desired velocity is a vector that points from its current location to the target location.  Assuming a PVector target, we then have:
+					<div class="source">
+						<pre><code>	PVector desired = PVector.sub(target,location);</code></pre>
+					</div> <!-- .source -->
+				</p>
+				<div class="image">
+					<image class="inline" title="Seek 2" src="<%=@folder%>/seek2.jpg"</image>
+				</div>	<!-- .image -->
+				<p>But this isn’t particularly realistic.  What if we have a very high-resolution window and the target is thousands of pixels away?  Sure, the vehicle might desire to teleport itself instantly to the target location with a massive velocity, but this won’t make for an effective animation.  What we really want to say is:
+					<blockquote><em>The vehicle desires to move towards the target at maximum speed.</em></blockquote>						
+					In other words, the vector should point from location to target and with a magnitude equal to maximum speed (i.e. the fastest the vehicle can go.)   So first, we need to make sure we add a variable in our Vehicle class to store maximum speed.
+				</p>
+				
+				<div class="source">
+					<pre><code>	class Vehicle { 
+		PVector location;
+		PVector velocity;
+		PVector acceleration;
+		float maxspeed;    	// Maximum speed
+	}</code></pre>
+				</div> <!-- .source -->
+	
+				<p>Then, in our desired velocity calculation, we scale according to maximum speed.</p>
+				
+				<div class="source">
+					<pre><code>	PVector desired = PVector.sub(target,location);
+		desired.normalize();
+		desired.mult(maxspeed);</code>
+					</pre>
+				</div> <!-- .source -->
+				
+				<div class="image">
+					<image class="inline" title="Seek 3" src="<%=@folder%>/seek3.jpg"</image>
+				</div>	<!-- .image -->
+				
+				<p>Putting this all together, we can write a function called seek() that receives a PVector target and calculates a steering force towards that target.</p>
+
+				<div class="source">
+					<pre><code>	void seek(PVector target) {
+		PVector desired = PVector.sub(target,location);  
+		desired.normalize();
+		desired.mult(maxspeed);		$$ Calculating the desired velocity to target at max speed
+		
+		PVector steer = PVector.sub(desired,velocity);
+
+					    	$$ Reynolds formula for steering force
+		applyForce(steer);		$$ Using our physics model and applying the force
+	}					$$ to the object’s acceleration</code>
+					</pre>
+				</div> <!-- .source -->
+				
+				<p>Note how in the above function we finish by passing the steering force into <b><em>applyForce()</em></b>.  This assumes that we are basing this example on the foundation we built in Chapter 2.  However, you could just as easily use the steering force with Box2D’s <b><em>applyForce()</em></b> function or toxiclibs’ <b><em>addForce()</em></b> function.</p>
+				<p>So why does this all work so well?  Let’s see what the steering force looks like relative to the vehicle and target locations.</p>
+				
+				<div class="image">
+					<image class="inline" title="Steering" src="<%=@folder%>/steering2.jpg"</image>
+				</div>	<!-- .image -->
+				
+				<p>Again, notice how this is not at all the same force as gravitational attraction.  Remember one of our principles of autonomous agents: An autonomous agent has a limited ability to perceive its environment.  Here is that ability, subtly embedded into Reynolds’s steering formula.  If the vehicle weren’t moving at all (zero velocity) desired minus velocity would be equal to desired.  But this is not the case.  The vehicle is aware of its own velocity and its steering force compensates accordingly.   This creates a more active simulation, as the way in which the vehicle moves towards the targets depends on the way it is moving in the first place.</p>
+				<p>In all of this excitement, however, we’ve missed one last step.  What sort of vehicle is this?  Is it a super sleek race car with amazing handling?  Or a giant Mack truck that needs a lot of advance notice to turn?   A graceful panda, or a lumbering elephant?  Our example code, as it stands, has no feature to account for this variability in steering ability.   Steering ability can be controlled with a variable that limits the magnitude of the steering force.  Let’s call it maxforce.  And so finally, we have:</p>
+				
+				<div class="source">
+					<pre><code>	class Vehicle { 
+		PVector location;
+		PVector velocity;
+		PVector acceleration;
+		float maxspeed;    	// Maximum speed
+		float maxforce;		// Maximum force
+	}</code></pre>
+				</div>
+			
+				<div class="source">
+					<pre><code>	void seek(PVector target) { 
+		PVector desired = PVector.sub(target,location);
+		desired.normalize();
+		desired.mult(maxspeed);
+		PVector steer = PVector.sub(desired,velocity);
+		steer.limit(maxforce);	$$ Limit the magnitude of the steering force
+	
+		applyForce(steer);
+	}</code></pre>
+				</div>
+				<p>Limiting the steering force brings up an important point.  We must always remember that it’s not actually our goal to get the Vehicle to the target as fast as possible.  If that were the case, we would just say “location equals target” and there the vehicle would be.  Our goal, as Reynolds puts it, is to move the vehicle in a lifelike and improvisational manner.  We’re trying to make it appear as if the vehicle is steering its way to the target, and so it’s up to us to play with the forces and variables of the system to achieve the result we want.  For example, a large maximum steering force would result in a very different path than a small one.  One is not inherently better or worse than the other; it depends on your desired effect.  (And of course, these values need not be fixed and could change based on other conditions.  Perhaps a vehicle has health: the better its health, the better it can steer.)</p>
+				
+				<div class="image">
+					<image class="inline" title="Max Force" src="<%=@folder%>/maxforce.jpg"</image>
+				</div>	<!-- .image -->
+				
+				<p>Here is the full Vehicle class, incorporating the rest of the elements from the Chapter 2 “Mover” object.</p>
+				<div class="image">
+					<image class="inline" title="Seek Example" src="<%=@folder%>/seekExample.jpg"</image>
+				</div>	<!-- .image -->
+				
+				<p><b>Example 6-1: Seeking a Target</b></p>
+				<div class="source">
+					<pre><code>	class Vehicle { 
+		PVector location;
+		  PVector velocity;
+		  PVector acceleration;
+		  float r;				$$ Additional variable for size
+		  float maxforce;
+		  float maxspeed;
+
+		  Vehicle(float x, float y) {
+		    acceleration = new PVector(0,0);
+		    velocity = new PVector(0,0);
+		    location = new PVector(x,y);
+		    r = 3.0;
+		    maxspeed = 4;			$$ Arbitrary values for maxspeed and force; try varying these!
+		    maxforce = 0.1;
+		  }
+
+		  void update() {			$$ Our standard “Euler integration” motion model		
+		    velocity.add(acceleration);
+		    velocity.limit(maxspeed);
+		    location.add(velocity);
+		    acceleration.mult(0);
+		  }
+
+		  void applyForce(PVector force) {	  $$ Newton’s second law; we could divide by mass if we wanted
+		    acceleration.add(force);
+		  }
+
+		  void seek(PVector target) {		  $$ Our seek steering force algorithm
+		    PVector desired = PVector.sub(target,location);    
+		    desired.normalize();
+		    desired.mult(maxspeed);
+		    PVector steer = PVector.sub(desired,velocity);
+		    steer.limit(maxforce);
+		    applyForce(steer);
+		  }
+
+		  void display() {					 $$ Vehicle is a triangle pointing in 
+		    float theta = velocity.heading2D() + PI/2;	 the direction of velocity; since it is drawn
+		    fill(175);						 pointing up, we rotate it an additional 90
+		    stroke(0);						 degrees
+		    pushMatrix();
+		    translate(location.x,location.y);
+		    rotate(theta);	
+		    beginShape();		   
+		    vertex(0, -r*2);
+		    vertex(-r, r*2);
+		    vertex(r, r*2);
+		    endShape(CLOSE);
+		    popMatrix();
+		  }
+	}</code></pre>
+				</div>
+				
+				<div class="exercise">
+					<p><em>Exercise: Implement a “fleeing” steering behavior (desired vector is inverse of “seek”).</em></p>
+					<p><em>Exercise: Implement seeking a moving target, often referred to as “pursuit.”  In this case, your desired vector won’t point towards the object’s current location, rather its “future” location as extrapolated based on its current velocity.   We’ll see this ability for a Vehicle to “predict the future” in later examples</em></p>
+					<p><em>Exercise: Create a sketch where a Vehicle’s maximum force and maximum speed do not remain constant, but rather vary according to environmental factors.</em></p>
+				</div>
+				
 			</section>
 			
 		</article>
 			 
 		
 		
-		<article>
-			<header>
-				<h2>Your article heading</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra. Pellentesque auctor neque quis nisl lacinia id rutrum lacus venenatis.</p>
-			</header>
-			<h3>A smaller heading</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra. Pellentesque auctor neque quis nisl lacinia id rutrum lacus venenatis.</p>	
-			<h3>A smaller heading</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra. Pellentesque auctor neque quis nisl lacinia id rutrum lacus venenatis.</p>
-			<footer>
-			<h3>About the author</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-			</footer>
-		</article>
+		
 	</div>
 	<div id="footer-container">
 		<footer class="wrapper">
