--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -332,9 +332,10 @@ border-spacing: 0;
 
 /* =============================================================================
    Primary styles
-   Author: 
+   Author: Miguel Bermudez
    ========================================================================== */
 
+/*Styles are loaded in subsequent link tag in html*/
 
 
 
