--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,481 +1,584 @@
-/*
- * HTML5 Boilerplate
- *
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-
 /* =============================================================================
-   HTML5 element display
+   HTML5 Boilerplate CSS: h5bp.com/css
    ========================================================================== */
-
-article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
-display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section {
+  display: block;
 }
-audio[controls], canvas, video {
-display: inline-block; *display: inline; *zoom: 1;
+audio,
+canvas,
+video {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
 }
-
-
-/* =============================================================================
-   Base
-   ========================================================================== */
-
-/*
- * 1. Correct text resizing oddly in IE6/7 when body font-size is set using em units
- *    http://clagnut.com/blog/348/#c790
- * 2. Force vertical scrollbar in non-IE
- * 3. Remove Android and iOS tap highlight color to prevent entire container being highlighted
- *    www.yuiblog.com/blog/2010/10/01/quick-tip-customizing-the-mobile-safari-tap-highlight-color/
- * 4. Prevent iOS text size adjust on device orientation change, without disabling user zoom
- *    www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/
- */
-
+audio:not([controls]) {
+  display: none;
+}
+[hidden] {
+  display: none;
+}
 html {
-font-size: 100%;
-overflow-y: scroll;
--webkit-overflow-scrolling: touch;
--webkit-tap-highlight-color: rgba(0,0,0,0);
--webkit-text-size-adjust: 100%;
--ms-text-size-adjust: 100%;
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
-
+html,
+button,
+input,
+select,
+textarea {
+  font-family: sans-serif;
+  color: #222;
+}
 body {
-margin: 0;
-font-size: 13px;
-line-height: 1.231;
+  margin: 0;
+  font-size: 1em;
+  line-height: 1.4;
 }
-
-body, button, input, select, textarea {
-font-family: sans-serif;
-color: #222;
-}
-
-/* 
- * These selection declarations have to be separate
- * No text-shadow: twitter.com/miketaylr/status/12228805301
- * Also: hot pink!
- */
-
 ::-moz-selection {
-background: #fe57a1;
-color: #fff;
-text-shadow: none;
+  background: #fe57a1;
+  color: #fff;
+  text-shadow: none;
 }
 ::selection {
-background: #fe57a1;
-color: #fff;
-text-shadow: none;
+  background: #fe57a1;
+  color: #fff;
+  text-shadow: none;
 }
-
-
-/* =============================================================================
-   Links
-   ========================================================================== */
-
 a {
-color: #00e;
+  color: #00e;
 }
 a:visited {
-color: #551a8b;
+  color: #551a8b;
+}
+a:hover {
+  color: #06e;
 }
 a:focus {
-outline: thin dotted;
+  outline: thin dotted;
 }
-
-/* Improve readability when focused and hovered in all browsers: people.opera.com/patrickl/experiments/keyboard/test */
-a:hover, a:active {
-outline: 0;
+a:hover,
+a:active {
+  outline: 0;
 }
-
-
-/* =============================================================================
-   Typography
-   ========================================================================== */
-
 abbr[title] {
-border-bottom: 1px dotted;
+  border-bottom: 1px dotted;
 }
-
-b, strong {
-font-weight: bold;
+b,
+strong {
+  font-weight: bold;
 }
-
 blockquote {
-margin: 1em 40px;
+  margin: 1em 40px;
 }
-
 dfn {
-font-style: italic;
+  font-style: italic;
 }
-
 hr {
-display: block;
-height: 1px;
-border: 0;
-border-top: 1px solid #ccc;
-margin: 1em 0;
-padding: 0;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
 }
-
 ins {
-background: #ff9;
-color: #000;
-text-decoration: none;
+  background: #ff9;
+  color: #000;
+  text-decoration: none;
 }
-
 mark {
-background: #ff0;
-color: #000;
-font-style: italic;
-font-weight: bold;
+  background: #ff0;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
 }
-
-/* Redeclare monospace font family: en.wikipedia.org/wiki/User:Davidgothberg/Test59 */
-pre, code, kbd, samp {
-font-family: monospace, monospace;
-_font-family: 'courier new', monospace;
-font-size: 1em;
+pre,
+code,
+kbd,
+samp {
+  font-family: monospace, serif;
+  _font-family: 'courier new', monospace;
+  font-size: 1em;
 }
-
-/* Improve readability of pre-formatted text in all browsers */
 pre {
-white-space: pre;
-white-space: pre-wrap;
-word-wrap: break-word;
+  white-space: pre;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
-
 q {
-quotes: none;
+  quotes: none;
 }
-q:before, q:after {
-content: "";
-content: none;
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
-
 small {
-font-size: 85%;
+  font-size: 85%;
 }
-
-/* Position subscript and superscript content without affecting line-height: gist.github.com/413930 */
-sub, sup {
-font-size: 75%;
-line-height: 0;
-position: relative;
-vertical-align: baseline;
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 sup {
-top: -0.5em;
+  top: -0.5em;
 }
 sub {
-bottom: -0.25em;
+  bottom: -0.25em;
 }
-
-
-/* =============================================================================
-   Lists
-   ========================================================================== */
-
-ul, ol {
-margin: 1em 0;
-padding: 0 0 0 40px;
+ul,
+ol {
+  margin: 1em 0;
+  padding: 0 0 0 40px;
 }
 dd {
-margin: 0 0 0 40px;
+  margin: 0 0 0 40px;
 }
-nav ul, nav ol {
-list-style: none;
-margin: 0;
-padding: 0;
+nav ul,
+nav ol {
+  list-style: none;
+  list-style-image: none;
+  margin: 0;
+  padding: 0;
 }
-
-
-/* =============================================================================
-   Embedded content
-   ========================================================================== */
-
-/*
- * Improve image quality when scaled in IE7
- * code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
- */
-
 img {
-border: 0;
--ms-interpolation-mode: bicubic;
+  border: 0;
+  -ms-interpolation-mode: bicubic;
+  vertical-align: middle;
 }
-
-/*
- * Correct overflow displayed oddly in IE9 
- */
-
 svg:not(:root) {
-overflow: hidden;
+  overflow: hidden;
 }
-
-
-/* =============================================================================
-   Figures
-   ========================================================================== */
-
 figure {
-margin: 0;
+  margin: 0;
 }
-
-
-/* =============================================================================
-   Forms
-   ========================================================================== */
-
 form {
-margin: 0;
+  margin: 0;
 }
 fieldset {
-border: 0;
-margin: 0;
-padding: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
-
-/* 
- * 1. Correct color not inheriting in IE6/7/8/9 
- * 2. Correct alignment displayed oddly in IE6/7 
- */
-
-legend {
-border: 0; *margin-left: -7px;
-padding: 0;
-}
-
-/* Indicate that 'label' will shift focus to the associated form element */
 label {
-cursor: pointer;
+  cursor: pointer;
 }
-
-/*
- * 1. Correct font-size not inheriting in all browsers
- * 2. Remove margins in FF3/4 S5 Chrome
- * 3. Define consistent vertical alignment display in all browsers
- */
-
-button, input, select, textarea {
-font-size: 100%;
-margin: 0;
-vertical-align: baseline; *vertical-align: middle;
+legend {
+  border: 0;
+  *margin-left: -7px;
+  padding: 0;
+  white-space: normal;
 }
-
-/*
- * 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet)
- * 2. Correct inner spacing displayed oddly in IE6/7
- */
-
-button, input {
-line-height: normal; *overflow: visible;
+button,
+input,
+select,
+textarea {
+  font-size: 100%;
+  margin: 0;
+  vertical-align: baseline;
+  *vertical-align: middle;
 }
-
-/*
- * 1. Display hand cursor for clickable form elements
- * 2. Allow styling of clickable form elements in iOS
- */
-
-button, input[type="button"], input[type="reset"], input[type="submit"] {
-cursor: pointer;
--webkit-appearance: button;
+button,
+input {
+  line-height: normal;
 }
-
-/*
- * Consistent box sizing and appearance
- */
-
-input[type="checkbox"], input[type="radio"] {
-box-sizing: border-box;
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  cursor: pointer;
+  -webkit-appearance: button;
+  *overflow: visible;
+}
+button[disabled],
+input[disabled] {
+  cursor: default;
+}
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+  *width: 13px;
+  *height: 13px;
 }
 input[type="search"] {
--moz-box-sizing: content-box;
--webkit-box-sizing: content-box;
-box-sizing: content-box;
+  -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
 }
-
-/* 
- * Remove inner padding and border in FF3/4
- * www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ 
- */
-
-button::-moz-focus-inner, input::-moz-focus-inner {
-border: 0;
-padding: 0;
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
 }
-
-/* Remove default vertical scrollbar in IE6/7/8/9 */
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
 textarea {
-overflow: auto;
-vertical-align: top;
+  overflow: auto;
+  vertical-align: top;
+  resize: vertical;
 }
-
-/* Colors for form validity */
-input:valid, textarea:valid {
+input:invalid,
+textarea:invalid {
+  background-color: #f0dddd;
 }
-input:invalid, textarea:invalid {
-background-color: #f0dddd;
-}
-
-
-/* =============================================================================
-   Tables
-   ========================================================================== */
-
 table {
-border-collapse: collapse;
-border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
+td {
+  vertical-align: top;
+}
+.chromeframe {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: black;
+  padding: 0.2em 0;
+}
+@font-face {
+  font-family: 'Chunkfive';
+  src: url('fonts/Chunkfive-webfont.eot');
+  src: url('fonts/Chunkfive-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/Chunkfive-webfont.woff') format('woff'), url('fonts/Chunkfive-webfont.ttf') format('truetype'), url('fonts/Chunkfive-webfont.svg#Chunkfive') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  text-rendering: optimizelegibility;
+}
+h1 small,
+h2 small,
+h3 small,
+h4 small,
+h5 small,
+h6 small {
+  font-weight: normal;
+  color: #8c9198;
+}
+h1 {
+  font-family: "Chunkfive";
+  font-size: 3em;
+  font-weight: normal;
+  line-height: 2.6em;
+}
+h1 small {
+  font-size: 1.8em;
+}
+h2 {
+  font-size: 2.4em;
+  line-height: 2.6em;
+}
+h2 small {
+  font-size: 1.8em;
+}
+h3 {
+  line-height: 1.9500000000000002em;
+  font-size: 1.8em;
+}
+h3 small {
+  font-size: 1.4em;
+}
+/* ===== Primary Styles ========================================================
+ Author: Miguel Bermudez
+ ========================================================================== */
+body {
+  background: #FFFFFF;
+  color: #3f433c;
+  font-size: 62.5%;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+}
+p,
+li,
+dl {
+  font-size: 1.6em;
+}
+li {
+  margin-bottom: 1em;
+}
+/* ===== Chapter Styles ================================================= */
+.chpt #main {
+  clear: both;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  width: 1024px;
+}
+.chpt aside {
+  background: #e0e4cc;
+  float: left;
+  margin: 0;
+  overflow: hidden;
+  width: 20%;
+  /* -- /header*/
 
+  /* -- /nav*/
 
+}
+.chpt aside header {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1.4em;
+  font-weight: normal;
+  line-height: 1em;
+  text-transform: lowercase;
+  font-variant: small-caps;
+  text-align: center;
+  padding-top: 20px;
+}
+.chpt aside header span {
+  font-family: "Chunkfive";
+  font-size: 1.6em;
+  font-weight: normal;
+  line-height: 1.5em;
+  font-family: "Chunkfive";
+  color: #3f433c;
+  font-variant: normal;
+  letter-spacing: .0625em;
+}
+.chpt aside header h1 {
+  font-family: "Chunkfive";
+  font-size: 1.8em;
+  font-weight: normal;
+  line-height: 1em;
+  background: #69d2e7;
+  font-variant: normal;
+  margin: 1.5em 0;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  text-align: left;
+  letter-spacing: 0;
+}
+.chpt aside header h1 span {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 0.5em;
+  font-weight: normal;
+  line-height: 1em;
+  background: #e0e4cc;
+  display: block;
+  padding: 0 0 0.25em 0.25em;
+}
+.chpt aside nav {
+  padding-left: 20px;
+}
+.chpt aside nav li {
+  display: block;
+  margin-bottom: 10px;
+}
+.chpt aside nav li a strong {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1.4em;
+  font-weight: normal;
+  line-height: 1em;
+  display: block;
+  color: #3f433c;
+}
+.chpt .content {
+  float: left;
+  margin: 0;
+  padding: 1em 0 1em 1em;
+  width: 70%;
+}
+.chpt #footer-container {
+  clear: both;
+}
 /* =============================================================================
-   Primary styles
-   Author: Miguel Bermudez
+   Media Queries
    ========================================================================== */
-
-/*Styles are loaded in subsequent link tag in html*/
-
-
-
-
-
-
-
+/* iPad and under */
+@media only screen and (max-width: 768px) {
+  body {
+    -webkit-text-size-adjust: none;
+  }
+  .chpt {
+    font-size: 0.5em;
+  }
+  .chpt #main {
+    width: 768px;
+  }
+  .chpt aside {
+    float: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  .chpt aside header h1 {
+    line-height: 2em;
+    margin: 0;
+    padding: 0 5px 0 20px;
+  }
+  .chpt aside header h1 span {
+    font-size: 0.75em;
+    padding: 5px 0 5px 5px;
+  }
+  .chpt aside nav ul {
+    float: left;
+  }
+  .chpt aside nav ul li {
+    float: left;
+    margin: 10px 20px 10px 0;
+  }
+  .chpt aside nav ul li a strong {
+    font-size: 1.2em;
+    margin-bottom: 0.25em;
+  }
+  .chpt .content {
+    margin-top: 22em;
+  }
+}
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+  .chpt {
+    font-size: 0.55em;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .chpt {
+    font-size: 1em;
+  }
+  .chpt header {
+    font-size: 1.0em !important;
+  }
+  .chpt nav li {
+    font-size: 1.1em ;
+  }
+  .chpt #main {
+    width: 1280px;
+  }
+}
 /* =============================================================================
-   Non-semantic helper classes
-   Please define your styles before this section.
+   Non-Semantic Helper Classes
    ========================================================================== */
-
-/* For image replacement */
 .ir {
-display: block;
-text-indent: -999em;
-overflow: hidden;
-background-repeat: no-repeat;
-text-align: left;
-direction: ltr;
+  display: block;
+  border: 0;
+  text-indent: -999em;
+  overflow: hidden;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  text-align: left;
+  direction: ltr;
+  *line-height: 0;
 }
 .ir br {
-display: none;
+  display: none;
 }
-
-/* Hide for both screenreaders and browsers:
-   css-discuss.incutio.com/wiki/Screenreader_Visibility */
 .hidden {
-display: none;
-visibility: hidden;
+  display: none !important;
+  visibility: hidden;
 }
-
-/* Hide only visually, but have it available for screenreaders: by Jon Neal.
-  www.webaim.org/techniques/css/invisiblecontent/  &  j.mp/visuallyhidden */
 .visuallyhidden {
-border: 0;
-clip: rect(0 0 0 0);
-height: 1px;
-margin: -1px;
-overflow: hidden;
-padding: 0;
-position: absolute;
-width: 1px;
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
-
-/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: drupal.org/node/897638 */
-.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
-clip: auto;
-height: auto;
-margin: 0;
-overflow: visible;
-position: static;
-width: auto;
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
 }
-
-/* Hide visually and from screenreaders, but maintain layout */
 .invisible {
-visibility: hidden;
+  visibility: hidden;
 }
-
-/* Contain floats: nicolasgallagher.com/micro-clearfix-hack/ */ 
-.clearfix:before, .clearfix:after {
-content: "";
-display: table;
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
 }
 .clearfix:after {
-clear: both;
+  clear: both;
 }
 .clearfix {
-zoom: 1;
+  *zoom: 1;
 }
-
-
-
 /* =============================================================================
-   PLACEHOLDER Media Queries for Responsive Design.
-   These override the primary ('mobile first') styles
-   Modify as content requires.
+   Print Styles
    ========================================================================== */
-
-@media only screen and (min-width: 480px) {
-  /* Style adjustments for viewports 480px and over go here */
-}
-
-@media only screen and (min-width: 768px) {
-  /* Style adjustments for viewports 768px and over go here */
-}
-
-
-/* =============================================================================
-   Print styles.
-   Inlined to avoid required HTTP connection: www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
- 
 @media print {
   * {
-background: transparent !important;
-color: black !important;
-text-shadow: none !important;
-filter: none !important;
--ms-filter: none !important;
-}
-/* Black prints faster: sanbeiji.com/archives/953 */
-  a, a:visited {
-color: #444 !important;
-text-decoration: underline;
-}
+    background: transparent !important;
+    color: black !important;
+    box-shadow: none !important;
+    text-shadow: none !important;
+    filter: none !important;
+    -ms-filter: none !important;
+  }
+  /* Black prints faster: h5bp.com/s */
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
   a[href]:after {
-content: " (" attr(href) ")";
-}
+    content: " (" attr(href) ")";
+  }
   abbr[title]:after {
-content: " (" attr(title) ")";
-}
-  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after {
-content: "";
-}
-/* Don't show links for images, or javascript/internal links */
-  pre, blockquote {
-border: 1px solid #999;
-page-break-inside: avoid;
-}
+    content: " (" attr(title) ")";
+  }
+  .ir a:after,
+  a[href^="javascript:"]:after,
+  a[href^="#"]:after {
+    content: "";
+  }
+  /* Don't show links for images, or javascript/internal links */
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
   thead {
-display: table-header-group;
-}
-/* css-discuss.incutio.com/wiki/Printing_Tables */
-  tr, img {
-page-break-inside: avoid;
-}
+    display: table-header-group;
+  }
+  /* h5bp.com/t */
+  tr,
   img {
-max-width: 100% !important;
-}
-  @page {
-margin: 0.5cm;
-}
-  p, h2, h3 {
-orphans: 3;
-widows: 3;
-}
-  h2, h3 {
-page-break-after: avoid;
-}
-
+    page-break-inside: avoid;
+  }
+  img {
+    max-width: 100% !important;
+  }
+  @page  {
+    margin: 0.5cm;
+  }
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
 }
