--- a/public/stylesheets/less/typography.less
+++ b/public/stylesheets/less/typography.less
@@ -1,11 +1,11 @@
 // Font Stacks
 @font-face {
     font-family: 'Chunkfive';
-    src: url('fonts/Chunkfive-webfont.eot');
-    src: url('fonts/Chunkfive-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/Chunkfive-webfont.woff') format('woff'),
-         url('fonts/Chunkfive-webfont.ttf') format('truetype'),
-         url('fonts/Chunkfive-webfont.svg#Chunkfive') format('svg');
+    src: url('./fonts/Chunkfive-webfont.eot');
+    src: url('./fonts/Chunkfive-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/Chunkfive-webfont.woff') format('woff'),
+         url('./fonts/Chunkfive-webfont.ttf') format('truetype'),
+         url('./fonts/Chunkfive-webfont.svg#Chunkfive') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -22,7 +22,7 @@
     font-weight: @weight;
     line-height: @lineHeight;
   }
-  .serif(@weight: normal, @size: 1.4em, @lineHeight: 2.0em) {
+  .serif(@weight: 400, @size: 1.6em, @lineHeight: 1.5em) {
     //font-family: "Georgia", Times New Roman, Times, serif;
     font-family: 'Gentium Book Basic', serif;
     font-size: @size;
