--- a/templates/design/public/stylesheets/design.css
+++ b/templates/design/public/stylesheets/design.css
@@ -1,13 +1,605 @@
+/* =============================================================================
+   HTML5 Boilerplate CSS: h5bp.com/css
+   ========================================================================== */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section {
+  display: block;
+}
+audio,
+canvas,
+video {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+}
+audio:not([controls]) {
+  display: none;
+}
+[hidden] {
+  display: none;
+}
+html {
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+html,
+button,
+input,
+select,
+textarea {
+  font-family: sans-serif;
+  color: #222;
+}
+body {
+  margin: 0;
+  font-size: 1em;
+  line-height: 1.4;
+}
+::-moz-selection {
+  background: #fe57a1;
+  color: #fff;
+  text-shadow: none;
+}
+::selection {
+  background: #fe57a1;
+  color: #fff;
+  text-shadow: none;
+}
+a {
+  color: #00e;
+}
+a:visited {
+  color: #551a8b;
+}
+a:hover {
+  color: #06e;
+}
+a:focus {
+  outline: thin dotted;
+}
+a:hover,
+a:active {
+  outline: 0;
+}
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+b,
+strong {
+  font-weight: bold;
+}
+blockquote {
+  margin: 1em 40px;
+}
+dfn {
+  font-style: italic;
+}
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+}
+ins {
+  background: #ff9;
+  color: #000;
+  text-decoration: none;
+}
+mark {
+  background: #ff0;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+pre,
+code,
+kbd,
+samp {
+  font-family: monospace, serif;
+  _font-family: 'courier new', monospace;
+  font-size: 1em;
+}
+pre {
+  white-space: pre;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+q {
+  quotes: none;
+}
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+small {
+  font-size: 85%;
+}
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sup {
+  top: -0.5em;
+}
+sub {
+  bottom: -0.25em;
+}
+ul,
+ol {
+  margin: 1em 0;
+  padding: 0 0 0 40px;
+}
+dd {
+  margin: 0 0 0 40px;
+}
+nav ul,
+nav ol {
+  list-style: none;
+  list-style-image: none;
+  margin: 0;
+  padding: 0;
+}
+img {
+  border: 0;
+  -ms-interpolation-mode: bicubic;
+  vertical-align: middle;
+}
+svg:not(:root) {
+  overflow: hidden;
+}
+figure {
+  margin: 0;
+}
+form {
+  margin: 0;
+}
+fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+label {
+  cursor: pointer;
+}
+legend {
+  border: 0;
+  *margin-left: -7px;
+  padding: 0;
+  white-space: normal;
+}
+button,
+input,
+select,
+textarea {
+  font-size: 100%;
+  margin: 0;
+  vertical-align: baseline;
+  *vertical-align: middle;
+}
+button,
+input {
+  line-height: normal;
+}
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  cursor: pointer;
+  -webkit-appearance: button;
+  *overflow: visible;
+}
+button[disabled],
+input[disabled] {
+  cursor: default;
+}
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+  *width: 13px;
+  *height: 13px;
+}
+input[type="search"] {
+  -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+textarea {
+  overflow: auto;
+  vertical-align: top;
+  resize: vertical;
+}
+input:invalid,
+textarea:invalid {
+  background-color: #f0dddd;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+td {
+  vertical-align: top;
+}
+.chromeframe {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: black;
+  padding: 0.2em 0;
+}
+@font-face {
+  font-family: 'Chunkfive';
+  src: url('./fonts/Chunkfive-webfont.eot');
+  src: url('./fonts/Chunkfive-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/Chunkfive-webfont.woff') format('woff'), url('./fonts/Chunkfive-webfont.ttf') format('truetype'), url('./fonts/Chunkfive-webfont.svg#Chunkfive') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  text-rendering: optimizelegibility;
+}
+h1 {
+  font-family: "Chunkfive";
+  font-size: 3em;
+  font-weight: normal;
+  line-height: 3em;
+}
+h1 small {
+  font-size: 1.8em;
+}
+h2 {
+  font-size: 2.4em;
+  line-height: 3em;
+}
+h2 small {
+  font-size: 1.8em;
+}
+h3 {
+  line-height: 2.25em;
+  font-size: 1.8em;
+}
+h3 small {
+  font-size: 1.4em;
+}
+/* ===== Primary Styles ========================================================
+ Author: Miguel Bermudez
+ ========================================================================== */
+/* Root
+----------------------------------------------------------------------------------------*/
+html {
+  overflow-y: scroll;
+  background: #FFFFFF;
+}
+img,
+embed,
+object,
+video {
+  max-width: 100%;
+}
+.ie6 img.full,
+.ie6 object.full,
+.ie6 embed,
+.ie6 video {
+  width: 100%;
+}
+/* Core
+----------------------------------------------------------------------------------------*/
+body {
+  background: #FFFFFF;
+  color: #3f433c;
+  font-size: 62.5%;
+  line-height: 1.5em;
+  margin: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.809em;
+  line-height: 1em;
+}
+a {
+  text-decoration: none;
+}
+p,
+li,
+dl {
+  font-size: 1.6em;
+  line-height: 2.25em;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  margin-bottom: 1em;
+}
+/* Book Styles
+ ----------------------------------------------------------------------------------------*/
 #container {
-	width: 800px;
-	margin: 0 auto;
+  clear: both;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  width: 1024px;
 }
+/*#container*/
+aside {
+  background: #e0e4cc;
+  float: left;
+  margin: 0;
+  padding: 20px 0 0 10px;
+  width: 28.3203125%;
+  /* 290 / 1024 */
 
-.breakout_box {
-	background-color: #D7D7D7;
-	padding: 20px;
+  /*  /nav  */
 }
+aside li {
+  line-height: 1em;
+}
+aside ul li ul li {
+  text-align: right;
+}
+aside a.chpt-title {
+  font-family: "Chunkfive";
+  font-size: 1.5625em;
+  font-weight: normal;
+  line-height: 2.34375em;
+  background: #69d2e7;
+  margin: 1.5em 0;
+}
+aside a.chpt-section {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 0.615384615em;
+  font-weight: normal;
+  line-height: 0.923076923em;
+  background: #e0e4cc;
+}
+/*  /aside  */
+#content {
+  float: left;
+  padding: 20px 20px 0 10px;
+  width: 67.7734375%;
+  /* 694 / 1024 */
 
-canvas {
-	border: 2px solid red;
+}
+#content h2 {
+  font-family: 'open sans';
+  font-size: 4em;
+  font-weight: 800;
+  line-height: 1em;
+}
+#content p,
+#content li {
+  font-family: 'Gentium Book Basic', serif;
+  font-size: 1.6em;
+  font-weight: 400;
+  line-height: 1.5em;
+}
+#content .breakout_box {
+  font-family: 'open sans';
+  font-size: 1.8em;
+  font-weight: 200;
+  line-height: 1.5em;
+  background: #ffffff;
+  border: 1px solid #fa6900;
+  padding: 20px;
+  font-style: italic;
+}
+#content .breakout_box h2 {
+  font-family: 'open sans';
+  font-size: 2em;
+  font-weight: 800;
+  line-height: 1em;
+  font-style: normal;
+}
+/*  #content  */
+/* =============================================================================
+   Media Queries
+   ========================================================================== */
+/* iPad and under */
+@media only screen and (max-width: 768px) {
+  body {
+    -webkit-text-size-adjust: none;
+  }
+  .chpt {
+    font-size: 0.5em;
+  }
+  .chpt #main {
+    width: 768px;
+  }
+  .chpt aside {
+    float: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  .chpt aside header h1 {
+    line-height: 2em;
+    margin: 0;
+    padding: 0 5px 0 20px;
+  }
+  .chpt aside header h1 span {
+    font-size: 0.75em;
+    padding: 5px 0 5px 5px;
+  }
+  .chpt aside nav ul {
+    float: left;
+  }
+  .chpt aside nav ul li {
+    float: left;
+    margin: 10px 20px 10px 0;
+  }
+  .chpt aside nav ul li a strong {
+    font-size: 1.2em;
+    margin-bottom: 0.25em;
+  }
+  .chpt .content {
+    margin-top: 22em;
+  }
+}
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+  .chpt {
+    font-size: 0.55em;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .chpt {
+    font-size: 1em;
+  }
+  .chpt header {
+    font-size: 1.0em !important;
+  }
+  .chpt nav li {
+    font-size: 1.1em ;
+  }
+  .chpt #main {
+    width: 1280px;
+  }
+}
+/* =============================================================================
+   Non-Semantic Helper Classes
+   ========================================================================== */
+.ir {
+  display: block;
+  border: 0;
+  text-indent: -999em;
+  overflow: hidden;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  text-align: left;
+  direction: ltr;
+  *line-height: 0;
+}
+.ir br {
+  display: none;
+}
+.hidden {
+  display: none !important;
+  visibility: hidden;
+}
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
+}
+.invisible {
+  visibility: hidden;
+}
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+.clearfix:after {
+  clear: both;
+}
+.clearfix {
+  *zoom: 1;
+}
+/* =============================================================================
+   Print Styles
+   ========================================================================== */
+@media print {
+  * {
+    background: transparent !important;
+    color: black !important;
+    box-shadow: none !important;
+    text-shadow: none !important;
+    filter: none !important;
+    -ms-filter: none !important;
+  }
+  /* Black prints faster: h5bp.com/s */
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
+  a[href]:after {
+    content: " (" attr(href) ")";
+  }
+  abbr[title]:after {
+    content: " (" attr(title) ")";
+  }
+  .ir a:after,
+  a[href^="javascript:"]:after,
+  a[href^="#"]:after {
+    content: "";
+  }
+  /* Don't show links for images, or javascript/internal links */
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
+  thead {
+    display: table-header-group;
+  }
+  /* h5bp.com/t */
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
+  img {
+    max-width: 100% !important;
+  }
+  @page  {
+    margin: 0.5cm;
+  }
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
 }
