--- a/templates/design/views/document.html.erb
+++ b/templates/design/views/document.html.erb
@@ -29,7 +29,9 @@
       <aside>
         <%= toc %>
       </aside>
-			<%= document.element.standard_render(views) %>
-		</div>
+      <div id="content">
+        <%= document.element.standard_render(views) %>
+      </div>
+		</div> <!-- #container -->
 	</body>
 </html>
